Adicionando banner novo 'banner3

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
         </header>
 
         <div class="hero">
-            <img id="hero" src="img/banner/banneremive1.png" alt="">
+            <img id="hero" src="img/banner/banneremive1.png" alt="hero">
+        </div>
+        
+        <div class="banner3">
+            <img id="hero" src="img/banner/banner3.png" alt="banner3">
         </div>
 
         <div class="bann">
@@ -47,7 +51,7 @@
                         <i class="fas fa-shield-alt"></i>
                         <br><br>MONITORAMENTO <br> 24 HORAS
                     </span>
-                    <span id="textoculto">Com o serviço de monitoramento EMIVE 24h você conta com o
+                    <span id="textoculto"><br>Com o serviço de monitoramento EMIVE 24h você conta com o
                     atendimento regionalizado da Unidade Volante, para um rápido
                     suporte sempre que você precisar.</span>
                 </a>
@@ -59,7 +63,7 @@
                         <i class="fas fa-volume-up"></i>
                         <br><br>ALARME<br>DE<br>SEGURANÇA
                     </span>
-                    <span id="textoculto">O alarme monitorado tem como objetivo proteger
+                    <span id="textoculto"><br>O alarme monitorado tem como objetivo proteger
                     o ambiente em que é instalado,
                     pois ele detecta rapidamente situações suspeitas.</span>
                 </a>
@@ -71,7 +75,7 @@
                         <i class="fas fa-video"></i>
                         <br><br>CÂMERA<br>DE<br>SEGURANÇA
                     </span>
-                    <span id="textoculto">O alarme monitorado tem como objetivo proteger
+                    <span id="textoculto"><br>O alarme monitorado tem como objetivo proteger
                     o ambiente em que é instalado,
                     pois ele detecta rapidamente situaçõessuspeitas.</span>
                 </a>
