--- a/orcamento.html
+++ b/orcamento.html
@@ -54,6 +54,9 @@
 
         <div class="container">
             <form action="https://formsubmit.co/7f26a70ede0dd409a365b799976a87a1" method="POST">
+                <input type="hidden" name="_next" value="http://127.0.0.1:5500/obrigado.html" />
+                <input type="hidden" name="_autoresponse"
+                    value="Recebemos sua mensagem, obrigado pelo contato e logo responderemos" />
                 <h3>PREENCHA TODO FORMULÁRIO ABAIXO PARA RECEBER O ORÇAMENTO POR E-MAIL</h3><br><br>
                 <label for="name">Nome</label>
                 <input type="text" name="name" id="name" required>
@@ -65,7 +68,7 @@
                 <input type="text" name="opcao" id="opcao" required>
                 <label for="message">Observação</label>
                 <input type="text" name="message" id="message" required><br><br>
-                <input type="hidden" name="_next" value="http://127.0.0.1:5500/obrigado.html">
+                
                 <button type="submit">ENVIAR</button>
 
             </form>
