--- a/orcamento.html
+++ b/orcamento.html
@@ -41,12 +41,12 @@
             </div>
             <div class="txtfoto">
                 <h5>BSB IMOVEIS E SEGURANCA LTDA</h5>
-                <h1>Guilherme Pacheco | 37 9 99995512</h1>
+                <h1>Guilherme Pacheco (37)9 9997-5512</h1><br>
                 <h4>FRANQUEADO ESPECIALISTA EM SEGURANÇA ELETRÔNICA</h4>
                 <a class="desenv" href="https://www.instagram.com/pachecoseg.eletronica/">
                     <img src="https://img.icons8.com/color/96/instagram-new--v1.png" alt="instagram-new--v1" />
                 </a>
-                <a class="desenv" href="https://wa.me/37999975512/?text=textourl">
+                <a class="desenv" href="https://wa.me/37999975512/?text=Olá, gostaria de sabre mais sobre a EMIVE.">
                     <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                 </a>
             </div>
