--- a/orcamento.html
+++ b/orcamento.html
@@ -57,7 +57,7 @@
                 <input type="hidden" name="_next" value="https://emiveguilhermepacheco.vercel.app/obrigado.html" />
                 <input type="hidden" name="_autoresponse"
                     value="Recebemos sua mensagem, obrigado pelo contato e logo responderemos" />
-                <h3>PREENCHA TODO FORMULÁRIO ABAIXO PARA RECEBER O ORÇAMENTO POR E-MAIL</h3><br><br>
+                <h3>PREENCHA TODO FORMULÁRIO ABAIXO PARA QUE ENTRAMOS EM CONTATO COM VOCÊ.</h3><br><br>
                 <label for="name">Nome</label>
                 <input type="text" name="name" id="name" required>
                 <label for="email">E-mail</label>
