Correção da frase "whatapps"

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <a class="desenv" href="https://www.instagram.com/pachecoseg.eletronica/">
                     <img src="https://img.icons8.com/color/96/instagram-new--v1.png" alt="instagram-new--v1" />
                 </a>
-                <a class="desenv" href="https://wa.me/37999975512/?text=Olá, gostaria de sabre mais sobre a EMIVE.">
+                <a class="desenv" href="https://wa.me/37999975512/?text=Olá, gostaria de sabre mais sober a EMIVE.">
                     <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                 </a>
              </div>
