ALTERAÇÃO FRASE "TXTFOTO"

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <img id="foto2" src="img/fotoperfil.jpg" alt="foto2">
             </div>
             <div class="txtfoto">
-                <h5>BSB IMOVEIS E SEGURANCA LTDA</h5>
+                <h5>VMG PROMOÇÃO DE VENDAS LTDA</h5>
                 <h1>Guilherme Pacheco  (37)9 9997-5512</h1><br>
                 <h4>FRANQUEADO ESPECIALISTA EM SEGURANÇA ELETRÔNICA</h4>
                 <a class="desenv" href="https://www.instagram.com/pachecoseg.eletronica/">
