--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a><img src="img/logo/logoemive.png" class="logo" alt="logoEmive" /></a>
             <nav id="navbar">
                 <ul>
-                    <li><a href="orcamento.html">ORÇAMENTO</a></li>
+                    <li><a class="orcamento" href="orcamento.html">SOLICITAR ORÇAMENTO</a></li>
                 </ul>
             </nav>
         </header>
@@ -39,6 +39,14 @@
 
         <div class="flayer1">
             <img id="flayer1" src="img/flayer/flayer1.png" alt="flayer1">
+        </div>
+
+        <div class="flayer2">
+            <img id="flayer1" src="img/flayer/smart1.png" alt="flayer2">
+        </div>
+
+        <div class="flayer3">
+            <img id="flayer3" src="img/flayer/smart2.png" alt="flayer3">
         </div>
         
         <div class="banner3">
@@ -82,6 +90,10 @@
             <img id="bannercell" src="img/banner/bannercell.png" alt="bannercell">
         </div>
 
+        <div class="bannermobile">
+            <img id="bannermobile" src="img/banner/mobile.png" alt="bannermobile">
+        </div>
+
         <div class="bannerEmive">
             <img src="img/banner/emivebanner.png" alt="bannerEmive">
         </div>
@@ -92,7 +104,7 @@
         
 
         <footer class="footer1">
-            <h2>AGENDE AGORA SUA <span class="txt">CONSULTORIA GRATUITA PRESENCIAL
+            <h2><br>AGENDE AGORA SUA <span class="txt">CONSULTORIA GRATUITA PRESENCIAL
                 COM</span> O FRANQUEADO ESPECIALISTA EM SEGURANÇA.</h2><br>
         </footer>
 
@@ -114,12 +126,12 @@
             </div>
             <div class="txtfoto">
                 <h5>VMG PROMOÇÃO DE VENDAS LTDA</h5>
-                <h1>Guilherme Pacheco  (37)9 9997-5512</h1><br>
+                <h1>Guilherme Pacheco<br>(31)9 7154-9334</h1><br>
                 <h4>FRANQUEADO ESPECIALISTA EM SEGURANÇA ELETRÔNICA</h4>
                 <a class="desenv" href="https://www.instagram.com/pachecoseg.eletronica/">
                     <img src="https://img.icons8.com/color/96/instagram-new--v1.png" alt="instagram-new--v1" />
                 </a>
-                <a class="desenv" href="https://wa.me/37999975512/?text=Olá, gostaria de sabre mais sober a EMIVE.">
+                <a class="desenv" href="https://wa.me/31971549334/?text=Olá, gostaria de sabre mais sober a EMIVE.">
                     <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                 </a>
              </div>
