--- a/orcamento.html
+++ b/orcamento.html
@@ -31,7 +31,7 @@
         </header>
 
         <div class="footer1">
-            <h2>AGENDE AGORA SUA <span class="txt">CONSULTORIA GRATUITA PRESENCIAL
+            <h2><br>AGENDE AGORA SUA <span class="txt">CONSULTORIA GRATUITA PRESENCIAL
                     COM</span> O FRANQUEADO ESPECIALISTA EM SEGURANÇA.</h2><br>
         </div>
 
@@ -41,12 +41,12 @@
             </div>
             <div class="txtfoto">
                 <h5>VMG PROMOÇÃO DE VENDAS LTDA</h5>
-                <h1>Guilherme Pacheco (37)9 9997-5512</h1><br>
+                <h1>Guilherme Pacheco <br>(31)9 7154-9334</h1><br>
                 <h4>FRANQUEADO ESPECIALISTA EM SEGURANÇA ELETRÔNICA</h4>
                 <a class="desenv" href="https://www.instagram.com/pachecoseg.eletronica/">
                     <img src="https://img.icons8.com/color/96/instagram-new--v1.png" alt="instagram-new--v1" />
                 </a>
-                <a class="desenv" href="https://wa.me/37999975512/?text=Olá, gostaria de saber mais sobre a EMIVE.">
+                <a class="desenv" href="https://wa.me/31971549334/?text=Olá, gostaria de saber mais sobre a EMIVE.">
                     <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                 </a>
             </div>
@@ -57,12 +57,12 @@
                 <input type="hidden" name="_next" value="https://emiveguilhermepacheco.vercel.app/obrigado.html" />
                 <input type="hidden" name="_autoresponse"
                     value="Recebemos sua mensagem, obrigado pelo contato e logo responderemos" />
-                <h3>PREENCHA TODO FORMULÁRIO ABAIXO PARA QUE ENTRAMOS EM CONTATO COM VOCÊ.</h3><br><br>
+                <h3>PREENCHA TODO FORMULÁRIO ABAIXO E ENTRAREMOS EM CONTATO.</h3><br><br>
                 <label for="name">Nome</label>
                 <input type="text" name="name" id="name" required>
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email" required>
-                <label for="tel">Telefone (DDD + X XXXX-XXXX)</label>
+                <label for="tel">Telefone (DDD + 9 9999-9999)</label>
                 <input type="text" name="tel" id="tel" required>
                 <label for="opcao">Alarme para sua residência ou comércio?</label>
                 <input type="text" name="opcao" id="opcao" required>
