--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
             <a><img src="img/logo/logoemive.png" class="logo" alt="logoEmive" /></a>
             <nav id="navbar">
                 <ul>
-                    <li><a class="orcamento" href="orcamento.html">SOLICITAR ORÇAMENTO</a></li>
+                    <li><a class="orcamento" href="orcamento.html">ORÇAMENTO E-MAIL</a></li>
+                    <li><a class="whatapps" href="https://wa.me/31971549334/?text=Olá, gostaria de sabre mais sober a EMIVE.">ORÇAMENTO WHATAPPS</a></li>
                 </ul>
+
+
             </nav>
         </header>
 
@@ -86,6 +89,15 @@
             <img id="comofunciona" src="img/flayer/comofunciona.png" alt="comofunciona">
         </div>
 
+        <div class="comofun1">
+            <img id="comofun1" src="img/flayer/comofun1.png" alt="comofun1">
+        </div>
+
+        <div class="comofun2">
+            <img id="comofun2" src="img/flayer/comofun2.png" alt="comofun2">
+        </div>
+
+
         <div class="bannercell">
             <img id="bannercell" src="img/banner/bannercell.png" alt="bannercell">
         </div>
@@ -104,8 +116,7 @@
         
 
         <footer class="footer1">
-            <h2><br>AGENDE AGORA SUA <span class="txt">CONSULTORIA GRATUITA PRESENCIAL
-                COM</span> O FRANQUEADO ESPECIALISTA EM SEGURANÇA.</h2><br>
+            <h2><br><span class="txt">QUANTO VALE A SUA SEGURANÇA?</span></h2><br>
         </footer>
 
         <!-- CLASSE FOOTER ESTÁ DESCONFIGURANDO O SITE
@@ -136,11 +147,6 @@
                 </a>
              </div>
         </footer>
-
-        <footer class="footer3">
-            <button id="orcamentoButton"><li><a class="textorc"href="orcamento.html">SOLICITAR ORÇAMENTO</a></li></button>
-        </footer>
-
         <footer class="footer4">
             <li><a class="desenv" href="https://www.linkedin.com/in/thiago-magalhaes94/"> Este site foi desenvolvido por Thiago Magalhães ©</a>
             </li>
