--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <nav id="navbar">
                 <ul>
                     <li><a class="orcamento" href="orcamento.html">ORÇAMENTO E-MAIL</a></li>
-                    <li><a class="whatapps" href="https://wa.me/31971549334/?text=Olá, gostaria de sabre mais sober a EMIVE.">ORÇAMENTO WHATAPPS</a></li>
+                    <li><a class="whatapps" href="https://wa.me/31971549334/?text=Olá, gostaria de sabre mais sober a EMIVE.">
+                        <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
+
+                    </a></li>
                 </ul>
 
 
