--- a/orcamento.html
+++ b/orcamento.html
@@ -31,7 +31,7 @@
         </header>
 
         <div class="footer1">
-            <h2><br>AGENDE AGORA SUA <span class="txt">CONSULTORIA GRATUITA PRESENCIAL
+            <h2><br>AGENDE AGORA SUA <span class="txt2">CONSULTORIA GRATUITA PRESENCIAL
                     COM</span> O FRANQUEADO ESPECIALISTA EM SEGURANÇA.</h2><br>
         </div>
 
