--- a/index.html
+++ b/index.html
@@ -25,11 +25,16 @@
             <a><img src="img/logo/logoemive.png" class="logo" alt="logoEmive" /></a>
             <nav id="navbar">
                 <ul>
-                    <li><a class="orcamento" href="orcamento.html">ORÇAMENTO E-MAIL</a></li>
-                    <li><a class="whatapps" href="https://wa.me/31971549334/?text=Olá, gostaria de sabre mais sober a EMIVE.">
+                    <li><a class="orcamento" href="orcamento.html">ORÇAMENTO POR E-MAIL</a></li>
+                    <li><a class="whatapps" href="https://wa.me/31971549334/?text=Olá, gostaria de sabre mais sober a EMIVE.">WHATAPPS 
                         <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
-
                     </a></li>
+
+                    <li><a class="whatapps2" href="https://wa.me/31971549334/?text=Olá, gostaria de sabre mais sober a EMIVE.">ORÇAMENTO VIA WHATAPPS
+                        <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
+                    </a></li>
+
+
                 </ul>
 
 
