--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                     </a></li>
 
-                    <li><a class="whatapps2" href="https://wa.me/31971549334/?text=Olá, gostaria de sabre mais sober a EMIVE.">ORÇAMENTO VIA WHATAPPS
+                    <li><a class="whatapps2" href="https://wa.me/31971549334/?text=Olá, gostaria de saber mais detalhes sobre o Sistema Smart EMIVE.">ORÇAMENTO VIA WHATAPPS
                         <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                     </a></li>
 
@@ -150,7 +150,7 @@
                 <a class="desenv" href="https://www.instagram.com/pachecoseg.eletronica/">
                     <img src="https://img.icons8.com/color/96/instagram-new--v1.png" alt="instagram-new--v1" />
                 </a>
-                <a class="desenv" href="https://wa.me/31971549334/?text=Olá, gostaria de sabre mais sober a EMIVE.">
+                <a class="desenv" href="https://wa.me/31971549334/?text=Olá, gostaria de saber mais detalhes sobre o Sistema Smart EMIVE.">
                     <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                 </a>
              </div>
