--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         </div>
 
         <div class="comofun1">
-            <img id="comofun1" src="img/flayer/comofun1.png" alt="comofun1">
+            <img id="comofun1" src="img/flayer/comofun2.png" alt="comofun1">
         </div>
 
         <div class="comofun2">
-            <img id="comofun2" src="img/flayer/comofun2.png" alt="comofun2">
+            <img id="comofun2" src="img/flayer/comofun1.png" alt="comofun2">
         </div>
 
 
@@ -156,7 +156,7 @@
              </div>
         </footer>
         <footer class="footer4">
-            <li><a class="desenv" href="https://www.linkedin.com/in/thiago-magalhaes94/"> Este site foi desenvolvido por Thiago Magalhães ©</a>
+            <li><a class="desenv" href="https://www.linkedin.com/in/thiago-magalhaes94/"> TDev ©</a>
             </li>
         </footer>
 
