--- a/orcamento.html
+++ b/orcamento.html
@@ -75,8 +75,7 @@
         </div>
 
         <footer class="footer4">
-            <li><a class="desenv" href="https://www.linkedin.com/in/thiago-magalhaes94/"> Este site foi desenvolvido por
-                    Thiago Magalhães ©</a>
+            <li><a class="desenv" href="https://www.linkedin.com/in/thiago-magalhaes94/">TDev ©</a>
             </li>
         </footer>
 
