--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-XXXXXX');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +20,10 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXX"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
@@ -25,12 +36,12 @@
             <a><img src="img/logo/logoemive.png" class="logo" alt="logoEmive" /></a>
             <nav id="navbar">
                 <ul>
-                    <li><a class="orcamento" href="orcamento.html">ORÇAMENTO POR E-MAIL</a></li>
+                    <li><a class="orcamento" href="orcamento.html">SOLICITAR ORÇAMENTO EMAIL</a></li>
                     <li><a class="whatapps" href="https://wa.me/31971549334/?text=Olá, gostaria de sabre mais sober a EMIVE."> 
                         <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                     </a></li>
 
-                    <li><a class="whatapps2" href="https://wa.me/31971549334/?text=Olá, gostaria de saber mais detalhes sobre o Sistema Smart EMIVE.">ORÇAMENTO VIA WHATAPPS
+                    <li><a class="whatapps2" href="https://wa.me/31971549334/?text=Olá, gostaria de saber mais detalhes sobre o Sistema Smart EMIVE.">WHATAPPS
                         <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                     </a></li>
 
@@ -69,10 +80,11 @@
         </div>
 
         <section class="servicos">
-        <div class="patrimonio">
-            <img id="patrimonio" src="img/minibanner/patrimonio.png" alt="patrimonio">
+        
+        <div>
+            <img id="patrimonio" src="img/minibanner/servicos.png" alt="patrimonio">
         </div>
-
+<!-- 
         <div class="botaopanico">
             <img id="botaopanico" src="img/minibanner/botaopanico.png" alt="botaopanico">
         </div>
@@ -90,7 +102,7 @@
 
         <div class="suporte">
             <img id="suporte" src="img/minibanner/suporte.png" alt="suporte">
-        </div>
+        </div>-->
 
     </section>
         <div class="comofunciona">
