--- a/obrigado.html
+++ b/obrigado.html
@@ -31,7 +31,7 @@
         </header>
 
 
-                <h4> OBRIGADO</h4><br><br>
+                <h2> <br>Obrigado!</h2><br><h3>Em breve entraremos em contato.</h3>
 
             </form>
         </div>
