--- a/orcamento.html
+++ b/orcamento.html
@@ -67,7 +67,7 @@
 
         <div class="container">
             <form action="https://formsubmit.co/7f26a70ede0dd409a365b799976a87a1" method="POST">
-                <input type="hidden" name="_next" value="" />
+                <input type="hidden" name="_next" value="https://segurancaemv.com.br/obrigado.html" />
                 <input type="hidden" name="_autoresponse"
                     value="Recebemos sua mensagem, obrigado pelo contato e logo responderemos" />
                 <h3>PREENCHA TODO FORMULÁRIO ABAIXO E ENTRAREMOS EM CONTATO.</h3><br><br>
