--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css" />
-    <title>EMIVE - Pacheco</title>
+    <title>EMIVE - Segurança Eletrônica</title>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
                         <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                     </a></li>
 
-                    <li><a class="whatapps2" href="https://wa.me/31971549334/?text=Olá, gostaria de saber mais detalhes sobre o Sistema Smart EMIVE.">WHATAPPS
+                    <li><a class="whatapps2" href="https://wa.me/31971549334/?text=Olá, gostaria de saber mais detalhes sobre o Sistema Smart EMIVE.">WHATSAPP
                         <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="whatsapp--v1" />
                     </a></li>
 
