--- a/obrigado.html
+++ b/obrigado.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-WQXJ6D7B');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +24,10 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WQXJ6D7B" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
@@ -30,16 +44,17 @@
                 </ul>
             </nav>
         </header>
-                <h2> <br>Obrigado!</h2><br><h3>Em breve entraremos em contato.</h3>
+        <h2> <br>Obrigado!</h2><br>
+        <h3>Em breve entraremos em contato.</h3>
 
-            </form>
-        </div>
+        </form>
+    </div>
 
-        <footer class="footer4">
-            <li><a class="desenv" href="https://www.linkedin.com/in/thiago-magalhaes94/"> Este site foi desenvolvido por
-                     Thiago Magalhães ©</a>
-            </li>
-        </footer>
+    <footer class="footer4">
+        <li><a class="desenv" href="https://www.linkedin.com/in/thiago-magalhaes94/"> Este site foi desenvolvido por
+                Thiago Magalhães ©</a>
+        </li>
+    </footer>
 
 
 
