Alteração formulário envio email

--- a/orcamento.html
+++ b/orcamento.html
@@ -67,10 +67,7 @@
         </div>
 
         <div class="container">
-            <form action="https://formsubmit.co/7f26a70ede0dd409a365b799976a87a1" method="POST">
-                <input type="hidden" name="_next" value="https://segurancaemv.com.br/obrigado.html" />
-                <input type="hidden" name="_autoresponse"
-                    value="Recebemos sua mensagem, obrigado pelo contato e logo responderemos" />
+            <form action="https://formspree.io/f/xdoqrbko" method="POST">
                 <h3>PREENCHA TODO FORMULÁRIO ABAIXO E ENTRAREMOS EM CONTATO.</h3><br><br>
                 <label for="name">Nome</label>
                 <input type="text" name="name" id="name" required>
@@ -82,9 +79,7 @@
                 <input type="text" name="opcao" id="opcao" required>
                 <label for="message">Observação</label>
                 <input type="text" name="message" id="message" required><br><br>
-                
                 <button type="submit">ENVIAR</button>
-
             </form>
         </div>
 
